--- a/opencv_回归模型.ipynb
+++ b/opencv_回归模型.ipynb
@@ -38,7 +38,8 @@
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
     "plt.style.use('ggplot')\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "# 使用回归模型预测连续的结果"
    ]
   },
   {
